# flam-rnd-assignment

./: README.md
app/src/main/: AndroidManifest.xml
app/src/main/java/com/flam/rnd/: GLRenderer.kt  MainActivity.kt
jni/: CMakeLists.txt  native-lib.cpp  native_headers.h
web/: index.html  package.json  tsconfig.json
web/src/: main.ts
